@@ -1,3 +1,10 @@
+2010-02-11  Andy Koppe  <andy.koppe@gmail.com>
+
+	* nlsfuncs.cc (initial_setlocale): Move check whether charset has
+	changed from here...
+	(internal_setlocale): ...to here, to avoid unnecessary work when invoked
+	via CW_INT_SETLOCALE.
+
 2010-02-10  Corinna Vinschen  <corinna@vinschen.de>
 
 	* nlsfuncs.cc (__set_charset_from_locale): Allow "@euro" modifier only
